--- a/cdprojects/Broadway/index.html
+++ b/cdprojects/Broadway/index.html
@@ -45,9 +45,7 @@
        </p>
        <p id = "contact">
          <h3>Contact</h3>
-          Phone: (555)-555-5555
-          Email: test@example.com
-          Twitter: @test
+          <span>Phone: (555)-555-5555      Email: test@example.com       Twitter: @test</span>
        </p>
     </div>
     <div id = "footer">
@@ -58,15 +56,15 @@
           <a href = "#work">Work</a>
           <a href = "#team">Team</a>
           <a href = "#contact">Contact</a>
-
+      </p>
+   </div>
 
   <!--      <h4><a href = "#home">Home</a></h4>
         <h4><a href = "#process">About</a></h4>
         <h4><a href = "#work">Work</a></h4>
         <h4><a href = "#team">Team</a></h4>
         <h4><a href = "#contact">Contact</a></h4>   When h4 is used inline attribut does not work-->
-      </p>
-    </div>
+
 
   </body>
 </html>
