Commit the enire directory of cdproject updates on mytimes

--- a/cdprojects/tortoiseshelloptics/index.html
+++ b/cdprojects/tortoiseshelloptics/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tortoise Shell Optics</title>
+    <link href = "./resources/reset.css" type = "text/css" rel="stylesheet" >
     <link href = "./resources/style.css"  type = "text/css" rel = "stylesheet" >
   </head>
   <body>
