Second commit on capstone

--- a/cdprojects/Capstone/index.html
+++ b/cdprojects/Capstone/index.html
@@ -16,9 +16,9 @@
         <nav>
            <h2 class = "desk">On Campus</h2><img class ="mobile" src = "./Resources/capstone_colmar_assets/images/ic-on-campus.svg" />
            <h2 class = "desk">Online</h2><img class ="mobile" src = "./Resources/capstone_colmar_assets/images/ic-online.svg" />
-           <h2 class = "desk">Our Companies</h2><img class ="mobile" src = "" />
+           <h2 class = "desk">Our Companies</h2>
            <h2 class = "desk">Sign in</h2><img class ="mobile" src = "./Resources/capstone_colmar_assets/images/ic-login.svg" />
-        </nav>
+       </nav>
 
     </div> <!-- header -->
     <!-- Learn something new Section -->
@@ -27,10 +27,59 @@
         <div class = " learntext">
             <h1>Learn Something</h1>
             <h1>new everyday</h1>
-            <p>Lorem ipsum dolor sit amet,</p>
-            <p> consectetur adipiscing elit.</p>
+            <p class = "latin">Lorem ipsum dolor sit amet,</p>
+            <p class = "latin"> consectetur adipiscing elit.</p>
             <h3>Start here</h3>
-        </div> <!-- end learntext -->
+        </div> <!-- learntext -->
      </div>  <!-- learnnew -->
+     <!-- keep practicing -->
+     <div class = "keeppractice">
+       <div class = "leftkp">
+           <img class = "practiceimg" src = "./Resources/capstone_colmar_assets/images/information-main.jpg" />
+           <div class = "practicetext">
+             <div class = "pt1">
+                <h1>It doesn't hurt to keep practicing</h1>
+             </div> <!-- pt1 -->
+             <div class = "pt2">
+                <p class = "latin">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,</p>
+                <p class = "latin">nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam</p>
+                <p class = "latin">eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+              </div> <!-- pt2 -->
+              <div id = "pt3" >
+                <p>Emanuel, Sr Strategist at Hiring.com</p>
+              </div> <!-- pt3 -->
+           </div> <!-- practice text -->
+       </div> <!-- leftkp Left of keep practice -->
+      <div class = "rightkp">
+            <div class = "kporientation">
+                  <img class = "desk" src = "./Resources/capstone_colmar_assets/images/information-orientation.jpg" />
+                  <img class = "mobile" src = "./Resources/capstone_colmar_assets/images/information-orientation-mobile.jpg" />
+                  <div class = "kptext1">
+                     <h2>Orientation date</h2>
+                     <p>Tue 10/11 Wed 10/12: 8am - 3pm</p>
+                     <p>Read more</p>
+                </div> <!-- kptext1 -->
+            </div> <!-- orientation -->
+            <div class = "kpcampus" >
+                 <img class = "desk" src = "./Resources/capstone_colmar_assets/images/information-campus.jpg" />
+                 <img class = "mobile" src = "./Resources/capstone_colmar_assets/images/information-campus-mobile.jpg" />
+                 <div class = "kptext2">
+                      <h2>Our Campus</h2>
+                      <p>Find which campus is close by you</p>
+                      <p>Read more</p>
+                </div> <!-- kptext2 --->
+            </div> <!-- Campus -->
+            <div class = "kpglecture">
+                  <img class = "desk" src = "./Resources/capstone_colmar_assets/images/information-guest-lecture.jpg" />
+                  <img class = "mobile" src = "./Resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg" />
+                  <div class = "kptext3">
+                      <h2>Our guest lecture</h2>
+                      <p>Join a keynote with Oliver Sack</p>
+                      <p>about music in medical treatment</p>
+                      <p>Read more</p>
+                  </div> <!-- kptext3 -->
+            </div> <!--Glecture-->
+      </div> <!-- Right keep practice -->
+     </div> <!-- Keep practice -->
   </body>
 </html>
