--- a/cdprojects/Capstone/index.html
+++ b/cdprojects/Capstone/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link href = "./Resources/css/style.css" type = "text/css" rel = "stylesheet" >
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
   </head>
   <body>
      <!-- Header Section -->
@@ -25,8 +26,8 @@
      <div class = "learnnew">
         <img class = "learnimg"  src = "./Resources/capstone_colmar_assets/images/banner.jpg"  />
         <div class = " learntext">
-            <h1>Learn Something</h1>
-            <h1>new everyday</h1>
+            <h1 id = "head1">Learn Something</h1>
+            <h1 id = "head2">new everyday</h1>
             <p class = "latin">Lorem ipsum dolor sit amet,</p>
             <p class = "latin"> consectetur adipiscing elit.</p>
             <h3>Start here</h3>
@@ -45,7 +46,7 @@
                 <p class = "latin">nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam</p>
                 <p class = "latin">eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
               </div> <!-- pt2 -->
-              <div id = "pt3" >
+              <div class = "pt3" >
                 <p>Emanuel, Sr Strategist at Hiring.com</p>
               </div> <!-- pt3 -->
            </div> <!-- practice text -->
@@ -55,28 +56,28 @@
                   <img class = "desk" src = "./Resources/capstone_colmar_assets/images/information-orientation.jpg" />
                   <img class = "mobile" src = "./Resources/capstone_colmar_assets/images/information-orientation-mobile.jpg" />
                   <div class = "kptext1">
-                     <h2>Orientation date</h2>
-                     <p>Tue 10/11 Wed 10/12: 8am - 3pm</p>
-                     <p>Read more</p>
+                     <h2 class = "line1">Orientation date</h2>
+                     <p class = "line2">Tue 10/11 Wed 10/12: 8am - 3pm</p>
+                     <p class = "line3">Read more</p>
                 </div> <!-- kptext1 -->
             </div> <!-- orientation -->
             <div class = "kpcampus" >
                  <img class = "desk" src = "./Resources/capstone_colmar_assets/images/information-campus.jpg" />
                  <img class = "mobile" src = "./Resources/capstone_colmar_assets/images/information-campus-mobile.jpg" />
                  <div class = "kptext2">
-                      <h2>Our Campus</h2>
-                      <p>Find which campus is close by you</p>
-                      <p>Read more</p>
+                      <h2 class = "line1">Our Campus</h2>
+                      <p class = "line2">Find which campus is close by you</p>
+                      <p class = "line3">Read more</p>
                 </div> <!-- kptext2 --->
             </div> <!-- Campus -->
             <div class = "kpglecture">
                   <img class = "desk" src = "./Resources/capstone_colmar_assets/images/information-guest-lecture.jpg" />
                   <img class = "mobile" src = "./Resources/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg" />
                   <div class = "kptext3">
-                      <h2>Our guest lecture</h2>
-                      <p>Join a keynote with Oliver Sack</p>
-                      <p>about music in medical treatment</p>
-                      <p>Read more</p>
+                      <h2 class = "line1">Our guest lecture</h2>
+                      <p class = "line2">Join a keynote with Oliver Sack</p>
+                      <p class = "line2">about music in medical treatment</p>
+                      <p class = "line3">Read more</p>
                   </div> <!-- kptext3 -->
             </div> <!--Glecture-->
       </div> <!-- Right keep practice -->
