--- a/cdprojects/Capstone/index.html
+++ b/cdprojects/Capstone/index.html
@@ -58,7 +58,7 @@
                   <div class = "kptext1">
                      <h2 class = "line1">Orientation date</h2>
                      <p class = "line2">Tue 10/11 Wed 10/12: 8am - 3pm</p>
-                     <p class = "line3">Read more</p>
+                     <p class = "line3"><a href = "./Resources/other/readmore.html">Read more</a></p>
                 </div> <!-- kptext1 -->
             </div> <!-- orientation -->
             <div class = "kpcampus" >
@@ -67,7 +67,7 @@
                  <div class = "kptext2">
                       <h2 class = "line1">Our Campus</h2>
                       <p class = "line2">Find which campus is close by you</p>
-                      <p class = "line3">Read more</p>
+                      <p class = "line3"><a href = "./Resources/other/readmore.html">Read more</a></p>
                 </div> <!-- kptext2 --->
             </div> <!-- Campus -->
             <div class = "kpglecture">
@@ -77,10 +77,74 @@
                       <h2 class = "line1">Our guest lecture</h2>
                       <p class = "line2">Join a keynote with Oliver Sack</p>
                       <p class = "line2">about music in medical treatment</p>
-                      <p class = "line3">Read more</p>
+                      <p class = "line3"><a href = "./Resources/other/readmore.html">Read more</a></p>
                   </div> <!-- kptext3 -->
             </div> <!--Glecture-->
       </div> <!-- Right keep practice -->
      </div> <!-- Keep practice -->
+     <div class = "startlearn">
+         <div class = "stlearn1">
+           <h1>Start learning</h1>
+        </div>  <!-- st learn1 -->
+        <div class = "stlearn2">
+            <div class = "stln2p1">
+                <img class = "stlnimage" src = "./Resources/capstone_colmar_assets/images/course-software.jpg" />
+                <div class = "stlearntext">
+                   <h3>Software engineering</h3>
+                   <h4>COURSES</h4>
+                   <p>Web Development, Mobile</p>
+                   <p>Development,iOT,APIs</p>
+                </div> <!--stlearntext -->
+            </div>   <!-- stln2p1 -->
+            <div class = "stln2p2">
+               <img class = "stlnimage" src = "./Resources/capstone_colmar_assets/images/course-computer-art.jpg" />
+               <div class = "stlearntext">
+                    <h3>Computer art</h3>
+                    <h4>COURSES</h4>
+                     <p>Imaging & Design, Web Design,</p>
+                    <p>Motion Graphics & Visual Effects,</p>
+                    <p>Computer Animation</p>
+                </div>      <!--stlearntext -->
+            </div>    <!-- stln2p2 -->
+            <div class = "stln2p3">
+               <img class = "stlnimage" src = "./Resources/capstone_colmar_assets/images/course-design.jpg" />
+                <div class = "stlearntext" >
+                   <h3>Design</h3>
+                   <h4>COURSES</h4>
+                   <p>User Experience Design, User</p>
+                   <p>Research, Visual Design</p>
+                </div>    <!-- stlearntext -->
+            </div>    <!-- stln2p3 -->
+        </div>    <!-- stlearn2 -->
+        <div class = "stlearn3">
+          <div class = "stln3p1">
+              <img class = "stlnimage" src = "./Resources/capstone_colmar_assets/images/course-data.jpg" />
+                 <div class = "stlearntext" >
+                     <h3>Data</h3>
+                     <h4>COURSES</h4>
+                     <p>Data Science, Big Data, SQL, Data</p>
+                     <p>Visualization</p>
+                </div>      <!-- stlearntext -->
+          </div>   <!-- stln3p1 -->
+          <div class = "stln3p2">
+             <img class = "stlnimage" src = "./Resources/capstone_colmar_assets/images/course-business.jpg" />
+             <div class = "stlearntext">
+                 <h3>Business</h3>
+                 <h4>COURSES</h4>
+                 <p>Product Development, Business</p>
+                 <p>Development, Startup</p>
+             </div>      <!-- stlearntext -->
+          </div>    <!-- stln3p2 -->
+          <div class = "stln3p3">
+             <img class = "stlnimage" src = "./Resources/capstone_colmar_assets/images/course-marketing.jpg" />
+             <div class = "stlearntext" >
+                 <h3>Marketing</h3>
+                 <h4>COURSES</h4>
+                 <p>Analytics, Content Marketing</p>
+                 <p>Mobile Marketing</p>
+              </div>    <!-- stlearntext -->
+          </div>    <!-- stln3p3 -->
+        </div>     <!-- stlearn3 -->
+     </div> <!-- startlearn -->
   </body>
 </html>
