Desktop final version colmar academy

--- a/cdprojects/Capstone/index1.html
+++ b/cdprojects/Capstone/index1.html
@@ -58,7 +58,7 @@
                   <div class = "kptext1">
                      <h2 class = "line1">Orientation date</h2>
                      <p class = "line2">Tue 10/11 Wed 10/12: 8am - 3pm</p>
-                     <p class = "line3"><a href = "./Resources/other/readmore.html">Read more</a></p>
+                     <p class = "line3"><a href = "./readmore.html">Read more</a></p>
                 </div> <!-- kptext1 -->
             </div> <!-- orientation -->
             <div class = "kpcampus" >
@@ -67,7 +67,7 @@
                  <div class = "kptext2">
                       <h2 class = "line1">Our Campus</h2>
                       <p class = "line2">Find which campus is close by you</p>
-                      <p class = "line3"><a href = "./Resources/other/readmore.html">Read more</a></p>
+                      <p class = "line3"><a href = "./readmore.html">Read more</a></p>
                 </div> <!-- kptext2 --->
             </div> <!-- Campus -->
             <div class = "kpglecture">
@@ -77,7 +77,7 @@
                       <h2 class = "line1">Our guest lecture</h2>
                       <p class = "line2">Join a keynote with Oliver Sack</p>
                       <p class = "line2">about music in medical treatment</p>
-                      <p class = "line3"><a href = "./Resources/other/readmore.html">Read more</a></p>
+                      <p class = "line3"><a href = "./readmore.html">Read more</a></p>
                   </div> <!-- kptext3 -->
             </div> <!--Glecture-->
       </div> <!-- Right keep practice -->
@@ -101,9 +101,9 @@
                <div class = "stlearntext">
                     <h3>Computer art</h3>
                     <h4>COURSES</h4>
-                     <p>Imaging & Design, Web Design,</p>
-                    <p>Motion Graphics & Visual Effects,</p>
-                    <p>Computer Animation</p>
+                     <p>Imaging &amp; Design, Web Design,</p>
+                    <p>Motion Graphics &amp; Visual Effects,</p>
+                  <p>Computer Animation</p>
                 </div>      <!--stlearntext -->
             </div>    <!-- stln2p2 -->
             <div class = "stln2p3">
@@ -122,8 +122,8 @@
                  <div class = "stlearntext" >
                      <h3>Data</h3>
                      <h4>COURSES</h4>
-                     <p>Data Science, Big Data, SQL, Data</p>
-                     <p>Visualization</p>
+                     <p>Data Science, Big Data, SQL,</p>
+                     <p>Data Visualization</p>
                 </div>      <!-- stlearntext -->
           </div>   <!-- stln3p1 -->
           <div class = "stln3p2">
@@ -131,8 +131,8 @@
              <div class = "stlearntext">
                  <h3>Business</h3>
                  <h4>COURSES</h4>
-                 <p>Product Development, Business</p>
-                 <p>Development, Startup</p>
+                 <p>Product Development, Business
+                 Development, Startup</p>
              </div>      <!-- stlearntext -->
           </div>    <!-- stln3p2 -->
           <div class = "stln3p3">
@@ -140,11 +140,58 @@
              <div class = "stlearntext" >
                  <h3>Marketing</h3>
                  <h4>COURSES</h4>
-                 <p>Analytics, Content Marketing</p>
-                 <p>Mobile Market ing</p>
+                 <p>Analytics, Content Marketing
+                 Mobile Market ing</p>
               </div>    <!-- stlearntext -->
           </div>    <!-- stln3p3 -->
         </div>     <!-- stlearn3 -->
      </div> <!-- startlearn -->
+     <!-- Theses Exhibit -->
+     <div class ="thesis" >
+       <div class = "thesisheader">
+               <h1>Theis exhibit</h1>
+       </div>    <!-- thesis header -->
+       <div class = "secondrow" >
+         <div class = "thesisleft">
+            <video id = "v1" widtht = 520 height = 440 controls
+             src = "./Resources/capstone_colmar_assets/videos/thesis.mp4" autoplay>
+             Oops!Video not supported by your browser!!!
+           </video>
+         </div> <!-- thesisleft -->
+         <div class = "thesisright" >
+              <div class = "fisma">
+                    <img class = "thesisimage"   src = "./Resources/capstone_colmar_assets/images/thesis-fisma.jpg" />
+                    <div class = "fismatext">
+                         <h3> Fisma: Design and</h3>
+                          <p> Designer showcase of new prototypr product</p>
+                  </div>   <!-- fismatext -->
+              </div>   <!-- fisma  -->
+              <div class = "nowthen" >
+                   <img class = "thesisimage" src = "./Resources/capstone_colmar_assets/images/thesis-now-and-then.jpg" />
+                   <div class = "nowtext">
+                          <h3>Now and then</h3>
+                           <p>Research study about New York</p>
+                 </div>  <!-- nowtext -->
+              </div>   <!-- Nowthen -->
+         </div> <!-- thesisright -->
+       </div> <!-- second row thesis -->
+       <div class = "thirdrow">
+            <h2>Reimagine urban</h2>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat.
+              Aliquam et commodo lectus, nec consequat neque. Sed non
+              accumsan urna. Phasellus sed consequat ex. Etiam eget
+              magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+
+       </div> <!-- thirrow -->
+         <!-- Last line  section -->
+       <div class = "lastsection">
+          <p> &#169; 2016 Colmar  Academy. All rights reserved.</p>
+
+             <h5 id = "h5term"><a href = "./terms.html">Terms</a></h5>
+             <h5 id = "h5privacy"><a href = "./privacy.html">Privacy</a><h5>
+
+       </div> <!-- footer -->
+   </div>     <!-- thesis -->
+
   </body>
 </html>
