--- a/cdprojects/Capstone/terms.html
+++ b/cdprojects/Capstone/terms.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <div id = "header">
-      <h1>Coming Soon...</h1>
+      <h1>Terms</h1>
+      <h2>Coming Soon...</h2>
+      <h3><a href = "./index1.html">Back to Home Page</a></h3>
     </div>
   </body>
 </html>
