Commit index1 updated version for desktop

--- a/cdprojects/Capstone/index2.html
+++ b/cdprojects/Capstone/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
-    <link href = "./Resources/css/style1.css" type = "text/css" rel = "stylesheet" >
+    <link href = "./Resources/css/style2.css" type = "text/css" rel = "stylesheet" >
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
   </head>
   <body>
@@ -14,14 +14,20 @@
            <h1 id ="c1">COLMAR</h1>
            <h1 id = "c2">ACADEMY</h1>
 
-        <nav>
+        <nav class = "desk">
            <h2 class = "desk">On Campus</h2>
            <h2 class = "desk">Online</h2>
            <h2 class = "desk">Our Companies</h2>
            <h2 class = "desk">Sign in</h2>
        </nav>
-
+       <nav class = "mobile">
+         <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-on-campus.svg" />
+         <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-online.svg" />
+         <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-login.svg" />
+       </nav>
     </div> <!-- header -->
+    <div class =
+
     <!-- Learn something new Section -->
      <div class = "learnnew">
         <img class = "learnimg"  src = "./Resources/capstone_colmar_assets/images/banner.jpg"  />
