--- a/cdprojects/Capstone/terms.html
+++ b/cdprojects/Capstone/terms.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Read More</title>
+    <title>Terms</title>
   </head>
   <body>
     <div id = "header">
