Final Version of Capstone project for desktop and mobile

--- a/cdprojects/Capstone/index2.html
+++ b/cdprojects/Capstone/index2.html
@@ -7,8 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
   </head>
   <body>
-     <!-- Header Section -->
-   <div class = "header">
+    <!-- Desktop -->
+   <div id = "desktop">
+         <!-- Header Section -->
+     <div class = "header">
 
            <img class = "logo" src ="./Resources/capstone_colmar_assets/images/ic-logo.svg" />
            <h1 id ="c1">COLMAR</h1>
@@ -20,14 +22,8 @@
            <h2 class = "desk">Our Companies</h2>
            <h2 class = "desk">Sign in</h2>
        </nav>
-       <nav class = "mobile">
-         <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-on-campus.svg" />
-         <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-online.svg" />
-         <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-login.svg" />
-       </nav>
+       <
     </div> <!-- header -->
-    <div class =
-
     <!-- Learn something new Section -->
      <div class = "learnnew">
         <img class = "learnimg"  src = "./Resources/capstone_colmar_assets/images/banner.jpg"  />
@@ -198,6 +194,21 @@
 
        </div> <!-- footer -->
    </div>     <!-- thesis -->
-
+    <!-- Mobile version  --->
+   <div id = "mobile" >
+     <div class = "header">
+        <img class = "logo" src ="./Resources/capstone_colmar_assets/images/ic-logo.svg" />
+         <nav class = "mobilemenu">
+           <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-on-campus.svg" />
+           <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-online.svg" />
+           <img class = "mobileimg" src = "./Resources/capstone_colmar_assets/images/ic-login.svg" />
+        </nav>
+     </div>
+     <div class = "section1" >
+           <img class = "learnimg"  src = "./Resources/capstone_colmar_assets/images/banner.jpg"  />
+           <h1>Learn Something new everyday</h1>
+           <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
+           <h3>Start here</h3>
+     </div>
   </body>
 </html>
